# mini_triton_nvgpu_v1

./: .gitignore  CMakeLists.txt  README.md
docs/: README.md  stage1_data_structures_and_passes.md
docs/学习与阅读/: MLIR语义硬真相数据结构终版设计_20260402.md  Operation、Value、Type、Attribute与MLIR基础语法详解.md  Triton优化执行与严格Pass验收方案_20260402.md  Triton对齐数据结构最终合同_20260402.md  Triton所有权真相AttrType重建方案_20260402.md  两天读通项目主线最小清单.md  严格形状对齐方案_20260401.md  优化核心代码文件清单与阅读顺序.md  其他算子、算子融合与优化顺序依赖说明.md  剩余未完成项与严格Triton一次性完成方案_20260407.md  剩余未完成项完整一次性修改方案_20260406.md  去桥接迁移方案_20260402.md  当前不足补足详细修改方案.md  当前剩余性能差距修复方案_20260402.md  当前性能与Triton根因复盘_20260402.md  当前数据结构与成熟度.md  文档目录.md  真实工作复杂度与矩阵乘法性能排查链路.md  矩阵乘法Triton核心对齐重构方案_20260402.md  矩阵乘法优先与可扩展性数据结构方案_20260402.md  第一阶段严格TritonPass验收清单_20260402.md  第一阶段完整Triton风格收口方案_20260403.md  第一阶段行运行目标落地修复后现状_20260402.md  补足过程先学内容与顺序.md  补足过程详细学习路径.md  项目优化主线代码文件清单与阅读顺序.md  项目总分层、数据结构与MLIR基础.md  项目阅读基础知识_依赖图与七天计划.md  项目阅读基础知识、依赖图与七天计划.md
docs/方案与复盘/: mini_triton_v1_stage1_complete_triton_style_closure_plan_20260403.md  mini_triton_v1_stage1_strict_triton_optimization_writing_validation_and_effect_proof_guide_20260402.md  tensor_core_integration.md  tensor_core_key_files.md  (+5 more)
examples/: layout_convert_roundtrip.mlir  smoke_128x128x32.mlir  smoke_64x64x32.mlir  smoke_96x80x32.mlir  smoke_grouped_192x128x32.mlir  smoke_persistent_192x128x32.mlir  smoke_splitk_64x64x64.mlir
include/: CMakeLists.txt
lib/: CMakeLists.txt
test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
tools/: CMakeLists.txt  bench_stage1_fair.py  build_triton_stage1_kernel.py  tb-opt.cpp
(+109 files in other folders)
